--- a/DirectX/DirectX.vcxproj.filters
+++ b/DirectX/DirectX.vcxproj.filters
@@ -629,6 +629,8 @@
     <ClInclude Include="System\Gui\TrueType.h" />
     <ClInclude Include="System\Gui\FontInfo.h" />
     <ClInclude Include="System\Gui\GuiRect.h" />
+    <ClInclude Include="System\Gui\PackContext.h" />
+    <ClInclude Include="System\Gui\GuiFontAtlasCustomRect.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader\MeshCommonHeader.hlsli" />
