--- a/DirectX/DirectX.vcxproj
+++ b/DirectX/DirectX.vcxproj
@@ -170,6 +170,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="System\Gui\GuiWidgets.cpp" />
+    <ClCompile Include="System\Gui\GuiWidgetSlider.cpp" />
     <ClCompile Include="System\Gui\Gui.cpp" />
     <ClCompile Include="System\Gui\GuiRenderer.cpp" />
     <ClCompile Include="System\Gui\GuiDrawList.cpp" />
@@ -429,6 +431,9 @@
     <ClCompile Include="Engine\ModelViewer\VertexSelector.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="System\Gui\GuiWidgets.h" />
+    <ClInclude Include="System\Gui\GuiDataType.h" />
+    <ClInclude Include="System\Gui\GuiWidgetSlider.h" />
     <ClInclude Include="System\Gui\Gui.h" />
     <ClInclude Include="System\Gui\GuiRenderer.h" />
     <ClInclude Include="System\Gui\DrawCornerFlags.h" />
