--- a/DirectX/imgui.ini
+++ b/DirectX/imgui.ini
@@ -10,6 +10,11 @@ Collapsed=0
 
 [Window][OBBOption]
 Pos=0,0
-Size=283,482
+Size=256,512
+Collapsed=0
+
+[Window][Test]
+Pos=0,0
+Size=256,512
 Collapsed=0
 
