--- a/DirectX/DirectX.vcxproj
+++ b/DirectX/DirectX.vcxproj
@@ -170,8 +170,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="System\Gui\GuiWidgets.cpp" />
-    <ClCompile Include="System\Gui\GuiWidgetSlider.cpp" />
+    <ClCompile Include="System\Gui\Widget\GuiWidgetColorPicker.cpp" />
+    <ClCompile Include="System\Gui\Widget\GuiWidgets.cpp" />
+    <ClCompile Include="System\Gui\Widget\GuiWidgetSlider.cpp" />
     <ClCompile Include="System\Gui\Gui.cpp" />
     <ClCompile Include="System\Gui\GuiRenderer.cpp" />
     <ClCompile Include="System\Gui\GuiDrawList.cpp" />
@@ -431,9 +432,11 @@
     <ClCompile Include="Engine\ModelViewer\VertexSelector.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="System\Gui\GuiWidgets.h" />
-    <ClInclude Include="System\Gui\GuiDataType.h" />
-    <ClInclude Include="System\Gui\GuiWidgetSlider.h" />
+    <ClInclude Include="System\Gui\Widget\GuiWidgetColorPicker.h" />
+    <ClInclude Include="System\Gui\Widget\GuiWidgetConstant.h" />
+    <ClInclude Include="System\Gui\Widget\GuiWidgets.h" />
+    <ClInclude Include="System\Gui\Widget\GuiDataType.h" />
+    <ClInclude Include="System\Gui\Widget\GuiWidgetSlider.h" />
     <ClInclude Include="System\Gui\Gui.h" />
     <ClInclude Include="System\Gui\GuiRenderer.h" />
     <ClInclude Include="System\Gui\DrawCornerFlags.h" />
