--- a/DirectX/DirectX.vcxproj
+++ b/DirectX/DirectX.vcxproj
@@ -170,6 +170,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="System\Gui\Widget\GuiWidgetColorBase.cpp" />
     <ClCompile Include="System\Gui\Widget\GuiWidgetColorPicker.cpp" />
     <ClCompile Include="System\Gui\Widget\GuiWidgets.cpp" />
     <ClCompile Include="System\Gui\Widget\GuiWidgetSlider.cpp" />
@@ -432,6 +433,7 @@
     <ClCompile Include="Engine\ModelViewer\VertexSelector.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="System\Gui\Widget\GuiWidgetColorBase.h" />
     <ClInclude Include="System\Gui\Widget\GuiWidgetColorPicker.h" />
     <ClInclude Include="System\Gui\Widget\GuiWidgetConstant.h" />
     <ClInclude Include="System\Gui\Widget\GuiWidgets.h" />
