テキストの表示をクラス化

--- a/DirectX/DirectX.vcxproj.filters
+++ b/DirectX/DirectX.vcxproj.filters
@@ -285,6 +285,8 @@
     <ClCompile Include="System\Gui\Widget\GuiWidgetColorPicker.cpp" />
     <ClCompile Include="System\Gui\Widget\GuiWidgetColorBase.cpp" />
     <ClCompile Include="Utility\AsciiHelper.cpp" />
+    <ClCompile Include="System\Gui\Widget\GuiWidgetText.cpp" />
+    <ClCompile Include="System\Gui\Widget\GuiWidgetTextBase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Component\ComponentManager.h" />
@@ -654,6 +656,8 @@
     <ClInclude Include="System\Gui\Widget\GuiWidgetConstant.h" />
     <ClInclude Include="System\Gui\Widget\GuiWidgetColorBase.h" />
     <ClInclude Include="Utility\AsciiHelper.h" />
+    <ClInclude Include="System\Gui\Widget\GuiWidgetText.h" />
+    <ClInclude Include="System\Gui\Widget\GuiWidgetTextBase.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader\MeshCommonHeader.hlsli" />
