フレームを管理するクラスを作成

--- a/DirectX/DirectX.vcxproj.filters
+++ b/DirectX/DirectX.vcxproj.filters
@@ -286,6 +286,7 @@
     <ClCompile Include="System\Gui\Widget\GuiWidgetColorBase.cpp" />
     <ClCompile Include="Utility\AsciiHelper.cpp" />
     <ClCompile Include="System\Gui\Widget\GuiWidgetText.cpp" />
+    <ClCompile Include="System\Gui\Widget\GuiWidgetFrameBase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Component\ComponentManager.h" />
@@ -656,6 +657,7 @@
     <ClInclude Include="System\Gui\Widget\GuiWidgetColorBase.h" />
     <ClInclude Include="Utility\AsciiHelper.h" />
     <ClInclude Include="System\Gui\Widget\GuiWidgetText.h" />
+    <ClInclude Include="System\Gui\Widget\GuiWidgetFrameBase.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader\MeshCommonHeader.hlsli" />
