--- a/DirectX/DirectX.vcxproj
+++ b/DirectX/DirectX.vcxproj
@@ -170,6 +170,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="System\Gui\Widget\GuiWidgetFrameBase.cpp" />
     <ClCompile Include="System\Gui\Widget\GuiWidgetText.cpp" />
     <ClCompile Include="Utility\AsciiHelper.cpp" />
     <ClCompile Include="System\Gui\Widget\GuiWidgetColorBase.cpp" />
@@ -435,6 +436,7 @@
     <ClCompile Include="Engine\ModelViewer\VertexSelector.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="System\Gui\Widget\GuiWidgetFrameBase.h" />
     <ClInclude Include="System\Gui\Widget\GuiWidgetText.h" />
     <ClInclude Include="Utility\AsciiHelper.h" />
     <ClInclude Include="System\Gui\Widget\GuiWidgetColorBase.h" />
